# OperatingSystems

./: .gitignore
lab1/: CMakeLists.txt  Makefile  build.cmd  build.sh
lab2/: CMakeLists.txt  background.cpp  background.hpp  main.cpp
lab3/: CMakeLists.txt  main.cpp  process_handler.cpp  process_handler.hpp  shared_memory.cpp  shared_memory.hpp
lab4/: CMakeLists.txt  main.cpp  process_handler.hpp  simulator.cpp  test.cpp
